fix images path

--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ html, body {
   border-radius: 36px;
   overflow: visible;
   background-color: #0e0e0e;
-  background-image: url("src/assets/images/background5.png");
+  background-image: url("/images/background5.png");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
